element overlapping bug solved

--- a/src/css/CommunitySportsContent.css
+++ b/src/css/CommunitySportsContent.css
@@ -6,7 +6,7 @@
   /* top: 32vh; */
 
   z-index: 0;
-  height: 90vh;
+  height: max-content;
   /* background-color: rgba(0, 255, 255, 0.509); */
 }
 .Comm-container .container {
@@ -17,7 +17,7 @@
 @media screen and (max-width: 960px) {
   .Comm-container {
     width: 100%;
-    height: 70vh;
+    height: max-content;
     /* top: 34vh; */
   }
 }
@@ -25,7 +25,7 @@
 @media screen and (max-width: 576px) {
   .Comm-container {
     width: 100%;
-    height: 80vh;
+    height: max-content;
     /* top: 25vh; */
   }
 }
